Write HTML for sidebar, header, and main content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,213 @@
 </head>
 
 <body>
-
+    <div class="sidebar">
+        <h1>Dashboard</h1>
+        <nav>
+            <ul>
+                <li><a href="#" class="home">Home</a></li>
+                <li><a href="#" class="profile">Profile</a></li>
+                <li><a href="#" class="messages">Messages</a></li>
+                <li><a href="#" class="history">History</a></li>
+                <li><a href="#" class="tasks">Tasks</a></li>
+                <li><a href="#" class="communities">Communities</a></li>
+                <li><a href="#" class="settings">Settings</a></li>
+                <li><a href="#" class="support">Support</a></li>
+                <li><a href="#" class="privacy">Privacy</a></li>
+            </ul>
+        </nav>
+    </div>
+    <header>
+        <div class="system-bar">
+            <form>
+                <!-- action and method attributes are purposefully left blank here, as these are beyond the scope of the project -->
+                <input type="search" name="search" aria-label="search">
+            </form>
+            <div class="user-menu">
+                <button class="notification-bell" type="button">
+                    <svg aria-hidden="true"><!-- Add content here --></svg>
+                </button>
+                <img src="images/morgan.jpg" alt="Morgan's avatar" class="avatar">
+                <h2 class="user-fullname">Morgan Oakley</h2>
+            </div>
+        </div>
+        <div class="action-bar">
+            <div class="user-greeting">
+                <img src="images/morgan.jpg" alt="Morgan's avatar" class="avatar">
+                <h2>
+                    <span class="welcome">Hi there,</span>
+                    <span class="name">Morgan Oakley (@morgan)</span>
+                </h2>
+            </div>
+            <ul class="actions">
+                <li><button class="btn-new" type="button">New</button></li>
+                <li><button class="btn-upload" type="button">Upload</button></li>
+                <li><button class="btn-share" type="button">Share</button></li>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <section class="projects">
+            <h2>Your Projects</h2>
+            <div class="content">
+                <article>
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis
+                        accumsan nec.</p>
+                    <footer class="actions">
+                        <button class="favorite" type="button" aria-label="add to favorites">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                        <button class="view" type="button" aria-label="view project details">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                        <button class="fork" type="button" aria-label="fork this project">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                    </footer>
+                </article>
+                <article>
+                    <h3>Less Cool Project</h3>
+                    <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur
+                        sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
+                    </p>
+                    <footer class="actions">
+                        <button class="favorite" type="button" aria-label="add to favorites">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                        <button class="view" type="button" aria-label="view project details">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                        <button class="fork" type="button" aria-label="fork this project">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                    </footer>
+                </article>
+                <article>
+                    <h3>Impossible App</h3>
+                    <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+                    <footer class="actions">
+                        <button class="favorite" type="button" aria-label="add to favorites">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                        <button class="view" type="button" aria-label="view project details">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                        <button class="fork" type="button" aria-label="fork this project">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                    </footer>
+                </article>
+                <article>
+                    <h3>Easy Peasy App</h3>
+                    <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam.
+                        Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+                    <footer class="actions">
+                        <button class="favorite" type="button" aria-label="add to favorites">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                        <button class="view" type="button" aria-label="view project details">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                        <button class="fork" type="button" aria-label="fork this project">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                    </footer>
+                </article>
+                <article>
+                    <h3>Ad Blocker</h3>
+                    <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis.
+                        Aliquam sed malesuada eros.</p>
+                    <footer class="actions">
+                        <button class="favorite" type="button" aria-label="add to favorites">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                        <button class="view" type="button" aria-label="view project details">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                        <button class="fork" type="button" aria-label="fork this project">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                    </footer>
+                </article>
+                <article>
+                    <h3>Money Maker</h3>
+                    <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque
+                        tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
+                    <footer class="actions">
+                        <button class="favorite" type="button" aria-label="add to favorites">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                        <button class="view" type="button" aria-label="view project details">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                        <button class="fork" type="button" aria-label="fork this project">
+                            <svg><!-- Insert here --></svg>
+                        </button>
+                    </footer>
+                </article>
+            </div>
+        </section>
+        <section class="announcements">
+            <h2>Announcements</h2>
+            <ul>
+                <li>
+                    <article>
+                        <h3>Site Maintenance</h3>
+                        <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales
+                            congue...</p>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <h3>Community Share Day</h3>
+                        <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan
+                            porttitor...</p>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <h3>Updated Privacy Policy</h3>
+                        <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla
+                            sagittis sem in mattis...</p>
+                    </article>
+                </li>
+            </ul>
+        </section>
+        <section class="trending">
+            <h2>Trending</h2>
+            <ul class="trending-users">
+                <li>
+                    <a>
+                        <img src="images/teagan.jpg" alt="Teagan's avatar" class="avatar">
+                        <h3 class="username">@teagan</h3>
+                        <span class="bio">World Peace Builder</span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img src="images/morgan.jpg" alt="Morgan's avatar" class="avatar">
+                        <h3 class="username">@morgan</h3>
+                        <span class="bio">Super Cool Project</span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img src="images/kendall.jpg" alt="Kendall's avatar" class="avatar">
+                        <h3 class="username">@kendall</h3>
+                        <span class="bio">Life Changing App</span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <img src="images/alex.jpg" alt="Alex's avatar" class="avatar">
+                        <h3 class="username">@alex</h3>
+                        <span class="bio">No Traffic Maker</span>
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 
 </html>
