--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <div class="sidebar">
         <h1>Dashboard</h1>
         <nav>
-            <ul>
+            <ul class="nav-activities">
                 <li><a href="#" class="home">Home</a></li>
                 <li><a href="#" class="profile">Profile</a></li>
                 <li><a href="#" class="messages">Messages</a></li>
                 <li><a href="#" class="history">History</a></li>
                 <li><a href="#" class="tasks">Tasks</a></li>
                 <li><a href="#" class="communities">Communities</a></li>
+            </ul>
+            <ul class="nav-support">
                 <li><a href="#" class="settings">Settings</a></li>
                 <li><a href="#" class="support">Support</a></li>
                 <li><a href="#" class="privacy">Privacy</a></li>
