Link notification bell SVG to HTML

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </form>
             <div class="user-menu">
                 <button class="notification-bell" type="button">
-                    <svg aria-hidden="true"><!-- Add content here --></svg>
+                    <img src="images/notification.svg" alt="Notification Bell">
                 </button>
                 <img src="images/morgan.jpg" alt="Morgan's avatar" class="avatar">
                 <h2 class="user-fullname">Morgan Oakley</h2>
