Implement grid layout for user-greeting  - col1: Morgan's avatar  - col2: Welcome text  - Set avatar's dimensions to 80px X 80px  - Display spans within welcome text as block, so they stack vertically

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <img src="images/morgan.jpg" alt="Morgan's avatar" class="avatar">
                 <h2>
                     <span class="welcome">Hi there,</span>
-                    <span class="name">Morgan Oakley (@morgan)</span>
+                    <span class="user">Morgan Oakley (@morgan)</span>
                 </h2>
             </div>
             <ul class="actions">
