Add fork SVG to first project card

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <img src="images/view.svg" alt="">
                         </button>
                         <button class="fork" type="button" aria-label="fork this project">
-                            <img src="" alt="">
+                            <img src="images/fork.svg" alt="">
                         </button>
                     </footer>
                 </article>
