Add href to homepage for trending-user links

--- a/index.html
+++ b/index.html
@@ -181,22 +181,22 @@
         <section class="trending">
             <h2>Trending</h2>
             <div class="trending-users">
-                <a>
+                <a href="#">
                     <img src="images/teagan.jpg" alt="Teagan's avatar" class="avatar">
                     <h3 class="username">@teagan</h3>
                     <h6 class="bio">World Peace Builder</h6>
                 </a>
-                <a>
+                <a href="#">
                     <img src="images/morgan.jpg" alt="Morgan's avatar" class="avatar">
                     <h3 class="username">@morgan</h3>
                     <h6 class="bio">Super Cool Project</h6>
                 </a>
-                <a>
+                <a href="#">
                     <img src="images/kendall.jpg" alt="Kendall's avatar" class="avatar">
                     <h3 class="username">@kendall</h3>
                     <h6 class="bio">Life Changing App</h6>
                 </a>
-                <a>
+                <a href="#">
                     <img src="images/alex.jpg" alt="Alex's avatar" class="avatar">
                     <h3 class="username">@alex</h3>
                     <h6 class="bio">No Traffic Maker</h6>
