--- a/index.html
+++ b/index.html
@@ -12,19 +12,49 @@
 
 <body>
     <div class="sidebar">
-        <h1>Dashboard</h1>
+        <h1>
+            <img src="images/dashboard.svg" alt="" aria-hidden="true">
+            Dashboard
+        </h1>
         <nav class="activities">
-            <a href="#" class="home">Home</a>
-            <a href="#" class="profile">Profile</a>
-            <a href="#" class="messages">Messages</a>
-            <a href="#" class="history">History</a>
-            <a href="#" class="tasks">Tasks</a>
-            <a href="#" class="communities">Communities</a>
+            <a href="#" class="home">
+                <img src="images/home.svg" alt="" aria-hidden="true">
+                Home
+            </a>
+            <a href="#" class="profile">
+                <img src="images/profile.svg" alt="" aria-hidden="true">
+                Profile
+            </a>
+            <a href="#" class="messages">
+                <img src="images/messages.svg" alt="" aria-hidden="true">
+                Messages
+            </a>
+            <a href="#" class="history">
+                <img src="images/history.svg" alt="" aria-hidden="true">
+                History
+            </a>
+            <a href="#" class="tasks">
+                <img src="images/tasks.svg" alt="" aria-hidden="true">
+                Tasks
+            </a>
+            <a href="#" class="communities">
+                <img src="images/communities.svg" alt="" aria-hidden="true">
+                Communities
+            </a>
         </nav>
         <nav class="support">
-            <a href="#" class="settings">Settings</a>
-            <a href="#" class="support">Support</a>
-            <a href="#" class="privacy">Privacy</a>
+            <a href="#" class="settings">
+                <img src="images/settings.svg" alt="" aria-hidden="true">
+                Settings
+            </a>
+            <a href="#" class="support">
+                <img src="images/support.svg" alt="" aria-hidden="true">
+                Support
+            </a>
+            <a href="#" class="privacy">
+                <img src="images/privacy.svg" alt="" aria-hidden="true">
+                Privacy
+            </a>
         </nav>
     </div>
     <header>
