Refactor sidebar layout with consistent icon/text alignment
- Replace complex nested grid approach with simpler grid structure
- Each nav link and h1 now uses individual grid (2.5rem auto columns)
- Icons centered in first column
- Text aligned at column-start in second column
- Remove unnecessary subgrid usage and conflicting flex/grid properties
- Add span elements to HTML sidebar text content
- Add consistent spacing between navigation sections

--- a/index.html
+++ b/index.html
@@ -14,46 +14,47 @@
     <div class="sidebar">
         <h1>
             <img src="images/dashboard.svg" alt="" aria-hidden="true">
-            Dashboard
+            <span>Dashboard</span>
         </h1>
-        <nav class="activities">
+        <nav class="activities" aria-label="Main navigation">
             <a href="#" class="home">
                 <img src="images/home.svg" alt="" aria-hidden="true">
-                Home
+                <span>Home</span>
             </a>
             <a href="#" class="profile">
                 <img src="images/profile.svg" alt="" aria-hidden="true">
-                Profile
+                <span>Profile</span>
             </a>
             <a href="#" class="messages">
                 <img src="images/messages.svg" alt="" aria-hidden="true">
-                Messages
+                <span>Messages</span>
             </a>
             <a href="#" class="history">
                 <img src="images/history.svg" alt="" aria-hidden="true">
-                History
+                <span>History</span>
             </a>
             <a href="#" class="tasks">
                 <img src="images/tasks.svg" alt="" aria-hidden="true">
-                Tasks
+                <span>Tasks</span>
             </a>
             <a href="#" class="communities">
                 <img src="images/communities.svg" alt="" aria-hidden="true">
-                Communities
+                <span>Communities</span>
             </a>
         </nav>
-        <nav class="support">
+
+        <nav class="support" aria-label="Support navigation">
             <a href="#" class="settings">
                 <img src="images/settings.svg" alt="" aria-hidden="true">
-                Settings
+                <span>Settings</span>
             </a>
             <a href="#" class="support">
                 <img src="images/support.svg" alt="" aria-hidden="true">
-                Support
+                <span>Support</span>
             </a>
             <a href="#" class="privacy">
                 <img src="images/privacy.svg" alt="" aria-hidden="true">
-                Privacy
+                <span>Privacy</span>
             </a>
         </nav>
     </div>
@@ -206,7 +207,7 @@
                     <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla
                         sagittis sem in mattis...</p>
                 </article>
-            </ul>
+                </ul>
         </section>
         <section class="trending">
             <h2>Trending</h2>
