Add search SVG to html search form
I planned to include the SVG in a ::before pseudo-element, but after I
realized that it would be simpler to align its left border with the
avatar below if it was included in the HTML

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
     <header>
         <div class="system-bar">
             <form>
-                <!-- action and method attributes are purposefully left blank here, as these are beyond the scope of the project -->
-                <input type="search" name="search" aria-label="search">
+                <label for="search">
+                    <img src="images/search.svg" alt="" aria-hidden="true">
+                </label>
+                <input type="search" name="search" id="search" aria-label="search">
             </form>
             <div class="user-menu">
                 <button class="notification-bell" type="button">
